--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -451,8 +451,8 @@ install -m 644 -p "system/systemd/netdata-updater.timer" "${RPM_BUILD_ROOT}%{_un
 install -m 644 -p "%{__cmake_builddir}/system/systemd/%{name}-updater.service" "${RPM_BUILD_ROOT}%{_unitdir}/%{name}-updater.service"
 install -m 755 -d "${RPM_BUILD_ROOT}%{_presetdir}"
 install -m 644 -p "system/systemd/50-%{name}.preset" "${RPM_BUILD_ROOT}%{_presetdir}/50-%{name}.preset"
-install -m 755 -d "${RPM_BUILD_ROOT}%{_systemd_util_dir}/journal@%{name}.conf.d"
-install -m 644 -p "system/systemd/journal@%{name}.conf" "${RPM_BUILD_ROOT}%{_systemd_util_dir}/journal@%{name}.conf.d/%{name}.conf"
+install -m 755 -d "${RPM_BUILD_ROOT}%{_systemd_util_dir}/journald@%{name}.conf.d"
+install -m 644 -p "system/systemd/journald@%{name}.conf" "${RPM_BUILD_ROOT}%{_systemd_util_dir}/journald@%{name}.conf.d/%{name}.conf"
 
 %pre
 
@@ -517,7 +517,7 @@ rm -rf "${RPM_BUILD_ROOT}"
 %{_unitdir}/%{name}-updater.timer
 %{_unitdir}/%{name}-updater.service
 %{_presetdir}/50-%{name}.preset
-%{_systemd_util_dir}/journal@%{name}.conf.d/%{name}.conf
+%{_systemd_util_dir}/journald@%{name}.conf.d/%{name}.conf
 
 %dir %{_libexecdir}/%{name}
 %dir %{_libexecdir}/%{name}/plugins.d
