--- a/.gitignore
+++ b/.gitignore
@@ -194,8 +194,5 @@ src/libnetdata/gorilla/fuzz-*.log
 build/
 
 # ignore rules for go plugin code
-src/go/collectors/go.d.plugin/bin/
-src/go/collectors/go.d.plugin/mocks/springboot2/.gradle/
-src/go/collectors/go.d.plugin/mocks/tmp/*
-!src/go/collectors/go.d.plugin/mocks/tmp/.gitkeep
-src/go/collectors/go.d.plugin/vendor
+src/go/plugin/go.d/bin/
+src/go/plugin/go.d/vendor
