--- a/src/go/plugin/go.d/modules/isc_dhcpd/metadata.yaml
+++ b/src/go/plugin/go.d/modules/isc_dhcpd/metadata.yaml
@@ -69,7 +69,7 @@ modules:
               detailed_description: |
                 List of IP pools to monitor.
 
-                - IP range syntax: see [supported formats](https://github.com/netdata/netdata/tree/master/src/go/collectors/go.d.plugin/pkg/iprange#supported-formats).
+                - IP range syntax: see [supported formats](https://github.com/netdata/netdata/tree/master/src/go/plugin/go.d/pkg/iprange#supported-formats).
                 - Syntax:
 
                 ```yaml
