posix spawn server for both executables and callback functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -739,6 +739,8 @@ set(LIBNETDATA_FILES
         src/libnetdata/os/strndup.h
         src/libnetdata/safe_fork/safe_fork.c
         src/libnetdata/safe_fork/safe_fork.h
+        src/libnetdata/spawn_server/spawn_server.c
+        src/libnetdata/spawn_server/spawn_server.h
 )
 
 if(ENABLE_PLUGIN_EBPF)
