--- a/src/go/plugin/go.d/modules/ipfs/metadata.yaml
+++ b/src/go/plugin/go.d/modules/ipfs/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: go.d.plugin
 modules:
   - meta:
+      id: collector-go.d.plugin-ipfs
       plugin_name: go.d.plugin
       module_name: ipfs
       monitored_instance:
@@ -14,12 +15,22 @@ modules:
           list: []
       info_provided_to_referring_integrations:
         description: ""
-      keywords: []
+      keywords:
+        - ipfs
+        - filesystem
       most_popular: false
     overview:
       data_collection:
-        metrics_description: "This collector monitors IPFS server metrics about its quality and performance."
-        method_description: "It connects to an http endpoint of the IPFS server to collect the metrics"
+        metrics_description: "This collector monitors IPFS daemon health and network activity."
+        method_description: |
+          It uses [RPC API](https://docs.ipfs.tech/reference/kubo/rpc/) to collect metrics.
+
+          Used endpoints:
+
+          - [/api/v0/stats/bw](https://docs.ipfs.tech/reference/kubo/rpc/#api-v0-stats-bw)
+          - [/api/v0/swarm/peers](https://docs.ipfs.tech/reference/kubo/rpc/#api-v0-swarm-peers)
+          - [/api/v0/stats/repo](https://docs.ipfs.tech/reference/kubo/rpc/#api-v0-stats-repo)
+          - [/api/v0/pin/ls](https://docs.ipfs.tech/reference/kubo/rpc/#api-v0-pin-ls)
       supported_platforms:
         include: []
         exclude: []
@@ -28,108 +39,139 @@ modules:
         description: ""
       default_behavior:
         auto_detection:
-          description: "If the endpoint is accessible by the Agent, netdata will autodetect it"
-        limits:
           description: |
-            Calls to the following endpoints are disabled due to IPFS bugs:
-            
-            /api/v0/stats/repo (https://github.com/ipfs/go-ipfs/issues/3874)
-            /api/v0/pin/ls (https://github.com/ipfs/go-ipfs/issues/7528)
-        performance_impact:
+            By default, it detects IPFS instances running on localhost that are listening on port 5001.
+        limits:
           description: ""
+        performance_impact:
+          description: |
+            Calls to the following endpoints are disabled by default due to IPFS bugs:
+
+            - /api/v0/stats/repo ([#7528](https://github.com/ipfs/go-ipfs/issues/7528)).
+            - /api/v0/pin/ls ([#3874](https://github.com/ipfs/go-ipfs/issues/3874)).
+
+            **Disabled by default** due to potential high CPU usage. Consider enabling only if necessary.
     setup:
       prerequisites:
         list: []
       configuration:
         file:
-          name: "go.d/ipfs.conf"
+          name: go.d/ipfs.conf
         options:
           description: |
-            There are 2 sections:
-            
-            * Global variables
-            * One or more JOBS that can define multiple different instances to monitor.
-            
-            The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
-            
-            Additionally, the following collapsed table contains all the options that can be configured inside a JOB definition.
-            
-            Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
+            The following options can be defined globally: update_every, autodetection_retry.
           folding:
             title: ""
             enabled: true
           list:
             - name: update_every
-              description: Sets the default data collection frequency.
-              default_value: 5
-              required: false
-            - name: priority
-              description: Controls the order of charts at the netdata dashboard.
-              default_value: 60000
+              description: Data collection frequency.
+              default_value: 1
               required: false
             - name: autodetection_retry
-              description: Sets the job re-check interval in seconds.
+              description: Recheck interval in seconds. Zero means no recheck will be scheduled.
               default_value: 0
               required: false
-            - name: penalty
-              description: Indicates whether to apply penalty to update_every in case of failures.
-              default_value: yes
-              required: false
-            - name: name
-              description: The JOB's name as it will appear at the dashboard (by default is the job_name)
-              default_value: job_name
-              required: false
-            - name: url
-              description: URL to the IPFS API
-              default_value: no
-              required: true
             - name: repoapi
-              description: Collect repo metrics.
-              default_value: no
+              description: Enables querying the [/api/v0/stats/repo](https://docs.ipfs.tech/reference/kubo/rpc/#api-v0-repo-stat) endpoint for repository statistics.
+              default_value: false
               required: false
             - name: pinapi
-              description: Set status of IPFS pinned object polling.
-              default_value: no
+              description: Enables querying the [/api/v0/pin/ls](https://docs.ipfs.tech/reference/kubo/rpc/#api-v0-pin-ls) endpoint to retrieve a list of all pinned objects.
+              default_value: false
+              required: false
+            - name: url
+              description: Server URL.
+              default_value: http://127.0.0.1:5001
+              required: true
+            - name: timeout
+              description: HTTP request timeout.
+              default_value: 1
+              required: false
+            - name: username
+              description: Username for basic HTTP authentication.
+              default_value: ""
+              required: false
+            - name: password
+              description: Password for basic HTTP authentication.
+              default_value: ""
+              required: false
+            - name: proxy_url
+              description: Proxy URL.
+              default_value: ""
+              required: false
+            - name: proxy_username
+              description: Username for proxy basic HTTP authentication.
+              default_value: ""
+              required: false
+            - name: proxy_password
+              description: Password for proxy basic HTTP authentication.
+              default_value: ""
+              required: false
+            - name: method
+              description: HTTP request method.
+              default_value: POST
+              required: false
+            - name: body
+              description: HTTP request body.
+              default_value: ""
+              required: false
+            - name: headers
+              description: HTTP request headers.
+              default_value: ""
+              required: false
+            - name: not_follow_redirects
+              description: Redirect handling policy. Controls whether the client follows redirects.
+              default_value: false
+              required: false
+            - name: tls_skip_verify
+              description: Server certificate chain and hostname validation policy. Controls whether the client performs this check.
+              default_value: false
+              required: false
+            - name: tls_ca
+              description: Certification authority that the client uses when verifying the server's certificates.
+              default_value: ""
+              required: false
+            - name: tls_cert
+              description: Client TLS certificate.
+              default_value: ""
+              required: false
+            - name: tls_key
+              description: Client TLS key.
+              default_value: ""
               required: false
         examples:
           folding:
             enabled: true
             title: "Config"
           list:
-            - name: Basic (default out-of-the-box)
-              description: A basic example configuration, one job will run at a time. Autodetect mechanism uses it by default.
+            - name: Basic
+              description: A basic example configuration.
               folding:
                 enabled: false
               config: |
-                localhost:
-                  name: 'local'
-                  url: 'http://localhost:5001'
-                  repoapi: no
-                  pinapi: no
+                jobs:
+                  - name: local
+                    url: http://127.0.0.1:5001
             - name: Multi-instance
               description: |
                 > **Note**: When you define multiple jobs, their names must be unique.
-                
+
                 Collecting metrics from local and remote instances.
               config: |
-                localhost:
-                  name: 'local'
-                  url: 'http://localhost:5001'
-                  repoapi: no
-                  pinapi: no
-                
-                remote_host:
-                  name: 'remote'
-                  url: 'http://192.0.2.1:5001'
-                  repoapi: no
-                  pinapi: no
+                jobs:
+                  - name: local
+                    url: http://127.0.0.1:5001
+
+                  - name: remote
+                    url: http://192.0.2.1:5001
     troubleshooting:
       problems:
         list: []
     alerts:
       - name: ipfs_datastore_usage
         link: https://github.com/netdata/netdata/blob/master/src/health/health.d/ipfs.conf
-        metric: ipfs.repo_size
+        metric: ipfs.datastore_space_utilization
         info: IPFS datastore utilization
     metrics:
       folding:
@@ -144,7 +186,7 @@ modules:
           metrics:
             - name: ipfs.bandwidth
               description: IPFS Bandwidth
-              unit: "kilobits/s"
+              unit: "bytes/s"
               chart_type: line
               dimensions:
                 - name: in
@@ -160,7 +202,6 @@ modules:
               unit: "GiB"
               chart_type: area
               dimensions:
-                - name: avail
                 - name: size
             - name: ipfs.repo_objects
               description: IPFS Repo Objects
@@ -168,5 +209,9 @@ modules:
               chart_type: line
               dimensions:
                 - name: objects
-                - name: pinned
+            - name: ipfs.repo_pinned_objects
+              description: IPFS Repo Pinned Objects
+              unit: "objects"
+              chart_type: line
+              dimensions:
                 - name: recursive_pins
