added ability to wait or kill spawned processes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -754,6 +754,8 @@ set(LIBNETDATA_FILES
         src/libnetdata/safe_fork/safe_fork.h
         src/libnetdata/spawn_server/spawn_server.c
         src/libnetdata/spawn_server/spawn_server.h
+        src/libnetdata/spawn_server/spawn_popen.c
+        src/libnetdata/spawn_server/spawn_popen.h
 )
 
 if(ENABLE_PLUGIN_EBPF)
