net_listeners.conf

--- a/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
+++ b/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
@@ -92,6 +92,9 @@ classify:
         expr: '{{ and (eq .Port "8081") (eq .Comm "pdns_recursor") }}'
       - tags: "proxysql"
         expr: '{{ or (eq .Port "6032") (eq .Comm "proxysql") }}'
+      - tags: "puppet"
+        expr: '{{ or (eq .Port "8140") (eq .Comm "puppet") }}'
+      
       - tags: "rabbitmq"
         expr: '{{ or (eq .Port "15672") (glob .Cmdline "*rabbitmq*") }}'
       - tags: "redis"
@@ -372,6 +375,12 @@ compose:
           module: proxysql
           name: local
           dsn: stats:stats@tcp({{.Address}})/
+      - selector: "puppet"
+        template: |
+          module: puppet
+          name: local
+          url: https://{{.Address}}:{{.Port}}
+          tls_skip_verify: yes
       - selector: "rabbitmq"
         template: |
           module: rabbitmq
