added universal os_setproctitle() call to support FreeBSD too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -752,6 +752,8 @@ set(LIBNETDATA_FILES
         src/libnetdata/spawn_server/spawn_popen.h
         src/libnetdata/os/close_range.c
         src/libnetdata/os/close_range.h
+        src/libnetdata/os/setproctitle.c
+        src/libnetdata/os/setproctitle.h
 )
 
 if(ENABLE_PLUGIN_EBPF)
