--- a/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
+++ b/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
@@ -94,7 +94,6 @@ classify:
         expr: '{{ or (eq .Port "6032") (eq .Comm "proxysql") }}'
       - tags: "puppet"
         expr: '{{ or (eq .Port "8140") (eq .Comm "puppet") }}'
-      
       - tags: "rabbitmq"
         expr: '{{ or (eq .Port "15672") (glob .Cmdline "*rabbitmq*") }}'
       - tags: "redis"
@@ -379,7 +378,7 @@ compose:
         template: |
           module: puppet
           name: local
-          url: https://{{.Address}}:{{.Port}}
+          url: https://{{.Address}}
           tls_skip_verify: yes
       - selector: "rabbitmq"
         template: |
