--- a/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
+++ b/src/go/plugin/go.d/config/go.d/sd/net_listeners.conf
@@ -93,7 +93,7 @@ classify:
       - tags: "proxysql"
         expr: '{{ or (eq .Port "6032") (eq .Comm "proxysql") }}'
       - tags: "puppet"
-        expr: '{{ or (eq .Port "8140") (eq .Comm "puppet") }}'
+        expr: '{{ or (eq .Port "8140") (glob .Cmdline "*puppet-server*") }}'
       - tags: "rabbitmq"
         expr: '{{ or (eq .Port "15672") (glob .Cmdline "*rabbitmq*") }}'
       - tags: "redis"
